--- a/ex8/class8.ipynb
+++ b/ex8/class8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "(4610, 1012)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "(100, 100)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,28 +125,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[ 1.00000000e+00, -4.56552019e-03,  1.41046509e-02, ...,\n",
-       "        -5.06435202e-04, -5.47073744e-04, -1.73276526e-03],\n",
+       "        -9.39062786e-04,  3.74882179e-04,  1.73276526e-03],\n",
        "       [-1.72281572e-02,  1.00000000e+00,  9.20999631e-03, ...,\n",
-       "        -7.55542491e-05,  3.69002392e-03, -1.14674525e-02],\n",
+       "         3.81586253e-04, -4.61926756e-03,  1.14674525e-02],\n",
        "       [ 7.43455543e-02,  1.28648154e-02,  1.00000000e+00, ...,\n",
-       "        -1.31851392e-04, -1.28174074e-03, -2.06606554e-03],\n",
+       "         9.45791984e-05, -4.69497214e-03,  2.06606554e-03],\n",
        "       ...,\n",
-       "       [-1.42808687e-02, -5.64600264e-04, -7.05379443e-04, ...,\n",
-       "         1.00000000e+00,  5.45786410e-03, -6.09124543e-03],\n",
-       "       [-1.54268272e-02,  2.75747361e-02, -6.85706503e-03, ...,\n",
-       "         5.45786410e-03,  1.00000000e+00,  1.13293987e-03],\n",
-       "       [-4.88619140e-02, -8.56937472e-02, -1.10530510e-02, ...,\n",
-       "        -6.09124543e-03,  1.13293987e-03,  1.00000000e+00]])"
+       "       [-2.64804507e-02,  2.85151003e-03,  5.05980418e-04, ...,\n",
+       "         1.00000000e+00,  6.99715062e-04,  6.29037201e-03],\n",
+       "       [ 1.05712304e-02, -3.45187691e-02, -2.51171928e-02, ...,\n",
+       "         6.99715062e-04,  1.00000000e+00, -1.45953765e-03],\n",
+       "       [ 4.88619140e-02,  8.56937472e-02,  1.10530510e-02, ...,\n",
+       "         6.29037201e-03, -1.45953765e-03,  1.00000000e+00]])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,10 +269,234 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.94427032e+01, 5.15238240e+00, 3.68862059e+00, 3.25735222e+00,\n",
+       "       2.95770320e+00, 2.56504113e+00, 2.40615438e+00, 2.11618550e+00,\n",
+       "       2.06980622e+00, 1.82976444e+00, 1.74020560e+00, 1.72433218e+00,\n",
+       "       1.67816099e+00, 1.61308548e+00, 1.57556408e+00, 1.53040409e+00,\n",
+       "       1.49607887e+00, 1.39348872e+00, 1.33576899e+00, 1.17678763e+00,\n",
+       "       1.24112031e+00, 1.20375562e+00, 1.22692363e+00, 1.14086180e+00,\n",
+       "       1.12354727e+00, 1.09108634e+00, 1.05554497e+00, 1.05204092e+00,\n",
+       "       1.00253513e+00, 9.54643875e-01, 9.68793702e-01, 9.29518482e-01,\n",
+       "       8.79094852e-01, 9.00918848e-01, 8.69155705e-01, 8.37269871e-01,\n",
+       "       8.17061029e-01, 7.88808487e-01, 7.64984542e-01, 7.82225124e-01,\n",
+       "       1.46043959e-02, 7.48066238e-01, 7.20410886e-01, 7.03604304e-01,\n",
+       "       6.63893554e-01, 6.43707830e-01, 6.33832535e-01, 5.33652655e-02,\n",
+       "       6.40409773e-02, 6.12774246e-01, 6.04021481e-01, 6.89005021e-02,\n",
+       "       7.30727989e-02, 5.86770986e-01, 5.71496212e-01, 8.89342447e-02,\n",
+       "       9.34717465e-02, 1.03474217e-01, 1.07218537e-01, 1.10307307e-01,\n",
+       "       5.39801481e-01, 5.28480414e-01, 1.20118322e-01, 1.27364077e-01,\n",
+       "       1.31485553e-01, 1.35273542e-01, 5.15344487e-01, 5.01176081e-01,\n",
+       "       1.55367840e-01, 1.70043626e-01, 4.78713384e-01, 1.75814581e-01,\n",
+       "       1.59323879e-01, 4.60574830e-01, 1.87134352e-01, 1.92730774e-01,\n",
+       "       4.53038200e-01, 2.02365253e-01, 2.14951741e-01, 4.37274357e-01,\n",
+       "       2.26761671e-01, 2.35319488e-01, 3.35835025e-01, 3.44781089e-01,\n",
+       "       3.83383946e-01, 3.76933096e-01, 3.56102643e-01, 4.18440051e-01,\n",
+       "       2.96938690e-01, 2.90513559e-01, 4.03283364e-01, 3.06294559e-01,\n",
+       "       2.47713627e-01, 4.24424723e-01, 4.06339628e-01, 2.52038285e-01,\n",
+       "       2.73560179e-01, 2.76090266e-01, 3.62114618e-01, 2.51305998e-01])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.94427032e+01, 5.15238240e+00, 3.68862059e+00, 3.25735222e+00,\n",
+       "       2.95770320e+00, 2.56504113e+00, 2.40615438e+00, 2.11618550e+00,\n",
+       "       2.06980622e+00, 1.82976444e+00, 1.74020560e+00, 1.72433218e+00,\n",
+       "       1.67816099e+00, 1.61308548e+00, 1.57556408e+00, 1.53040409e+00,\n",
+       "       1.49607887e+00, 1.39348872e+00, 1.33576899e+00, 1.17678763e+00,\n",
+       "       1.24112031e+00, 1.20375562e+00, 1.22692363e+00, 1.14086180e+00,\n",
+       "       1.12354727e+00, 1.09108634e+00, 1.05554497e+00, 1.05204092e+00,\n",
+       "       1.00253513e+00, 9.54643875e-01, 9.68793702e-01, 9.29518482e-01,\n",
+       "       8.79094852e-01, 9.00918848e-01, 8.69155705e-01, 8.37269871e-01,\n",
+       "       8.17061029e-01, 7.88808487e-01, 7.64984542e-01, 7.82225124e-01,\n",
+       "       1.46043959e-02, 7.48066238e-01, 7.20410886e-01, 7.03604304e-01,\n",
+       "       6.63893554e-01, 6.43707830e-01, 6.33832535e-01, 5.33652655e-02,\n",
+       "       6.40409773e-02, 6.12774246e-01, 6.04021481e-01, 6.89005021e-02,\n",
+       "       7.30727989e-02, 5.86770986e-01, 5.71496212e-01, 8.89342447e-02,\n",
+       "       9.34717465e-02, 1.03474217e-01, 1.07218537e-01, 1.10307307e-01,\n",
+       "       5.39801481e-01, 5.28480414e-01, 1.20118322e-01, 1.27364077e-01,\n",
+       "       1.31485553e-01, 1.35273542e-01, 5.15344487e-01, 5.01176081e-01,\n",
+       "       1.55367840e-01, 1.70043626e-01, 4.78713384e-01, 1.75814581e-01,\n",
+       "       1.59323879e-01, 4.60574830e-01, 1.87134352e-01, 1.92730774e-01,\n",
+       "       4.53038200e-01, 2.02365253e-01, 2.14951741e-01, 4.37274357e-01,\n",
+       "       2.26761671e-01, 2.35319488e-01, 3.35835025e-01, 3.44781089e-01,\n",
+       "       3.83383946e-01, 3.76933096e-01, 3.56102643e-01, 4.18440051e-01,\n",
+       "       2.96938690e-01, 2.90513559e-01, 4.03283364e-01, 3.06294559e-01,\n",
+       "       2.47713627e-01, 4.24424723e-01, 4.06339628e-01, 2.52038285e-01,\n",
+       "       2.73560179e-01, 2.76090266e-01, 3.62114618e-01, 2.51305998e-01])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.00828369,  0.06258271, -0.02181799, ..., -0.01110765,\n",
+       "         0.00761152,  0.02377608],\n",
+       "       [-0.01327725,  0.05008725, -0.01685615, ..., -0.10437251,\n",
+       "         0.13065621,  0.25858224],\n",
+       "       [ 0.14932627,  0.24608484, -0.00656078, ...,  0.02051747,\n",
+       "         0.07515479, -0.04728626],\n",
+       "       ...,\n",
+       "       [ 0.05770818, -0.18069864,  0.29231066, ...,  0.1180824 ,\n",
+       "        -0.00957033,  0.14313428],\n",
+       "       [ 0.06292419, -0.03530023,  0.02708421, ..., -0.1060397 ,\n",
+       "        -0.1411637 , -0.02577948],\n",
+       "       [ 0.00899013,  0.14578211,  0.14326631, ...,  0.06373922,\n",
+       "         0.08211362,  0.08247302]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[:,u<lambda_plus]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u1 = np.diag(u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 95)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4765966227514582e-14"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v[2,:].dot(v[10,:].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = v[:,u<lambda_plus]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def computer_C_minus_C0(lambdas,v,lambda_plus):\n",
+    "    N =len(lambdas)\n",
+    "    C_clean = np.zeros((N,N))\n",
+    "    \n",
+    "    v_m = np.matrix(v)\n",
+    "    \n",
+    "    lambda_M = max(lambdas)\n",
+    "    for i in range(N):\n",
+    "        if lambdas[i] > lambda_plus and lambdas[i] < lambda_M:\n",
+    "            C_clean = C_clean + lambdas[i] * np.dot(v_m[i,].T,v_m[i,])\n",
+    "    return C_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'jgraph' has no attribute 'Graph'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-57-e14e5721468f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcommunity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmygraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWeighted_Adjacency\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mC_s\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mmyclusters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_partition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmygraph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mModularityVertexPartition\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmyclusters\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmembership\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'jgraph' has no attribute 'Graph'"
+     ]
+    }
+   ],
+   "source": [
+    "import jgraph\n",
+    "import louvain as lv\n",
+    "import community \n",
+    "\n",
+    "mygraph = graph.Graph.Weighted_Adjacency(np.matrix(C_s).tolist())\n",
+    "myclusters = lv.find_partition(mygraph,lv.ModularityVertexPartition)\n",
+    "pd.DataFrame(myclusters.membership)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "community.ne"
+   ]
   }
  ],
  "metadata": {
@@ -291,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
