--- a/project.ipynb
+++ b/project.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2206,7 +2206,7 @@
        "[4980 rows x 936 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2285,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4058,7 +4058,7 @@
        "[4980 rows x 755 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4079,7 +4079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4109,7 +4109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -5882,7 +5882,7 @@
        "[4980 rows x 755 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5980,12 +5980,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Markowitz  mean-variance portfolio"
+    "# Markowitz  mean-variance portfolio\n",
+    "we separate our data into two parts in order to do out-sample prediction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.stats as stats\n",
+    "from sklearn.covariance import LedoitWolf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5994,20 +6005,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def corr2cov(corr,std):\n",
+    "    std_diag = np.diag(std)\n",
+    "    cov = np.dot(np.dot(std_diag,corr),std_diag)\n",
+    "    return cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_cov_metrix(returns,method,threshold=0):\n",
+    "    if method == 'normal':\n",
+    "        corr = np.corrcoef(returns.T)\n",
+    "        std = returns.std()\n",
+    "        return corr2cov(corr,std)\n",
+    "    elif method == 'Shrinkage':\n",
+    "        \n",
+    "        return 0\n",
+    "    elif method =='clipping':\n",
+    "        corr = np.corrcoef(returns.T)\n",
+    "        std = returns.std() \n",
+    "        u,v = np.linalg.eig(corr)\n",
+    "        N =len(u)\n",
+    "        C_clean = np.zeros((N,N))\n",
+    "        v_m = np.matrix(v.T)\n",
+    "        lambda_M = max(u)\n",
+    "        for i in range(N):\n",
+    "            if u[i] > lambda_plus and u[i] < lambda_M:\n",
+    "                C_clean = C_clean + u[i] * np.dot(v_m[i,].T,v_m[i,])\n",
+    "        return C_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "returns_mean = 252*clean_log_return.mean()\n",
-    "returns_cov = 252*clean_log_return.cov()\n",
+    "returns_cov = 252*compute_cov_metrix(clean_log_return,'normal')\n",
     "num_stocks = len(clean_log_return.columns)\n",
-    "n_portfolios = 50000\n",
+    "n_portfolios = 25000\n",
     "risk_free_rate = 0.0178"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
